--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "private": false,
   "version": "1.0.0",
   "description": "A modern React admin panel built with Vite and Tailwind CSS",
-  "keywords": ["react", "admin", "dashboard", "vite", "tailwind", "typescript"],
+  "keywords": [
+    "react",
+    "admin",
+    "dashboard",
+    "vite",
+    "tailwind",
+    "typescript"
+  ],
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,7 +20,9 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -27,7 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
