--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vite preview --host"
   },
   "dependencies": {
     "axios": "^1.13.1",
